iphone 5/SE compatible, mobile order improved

--- a/index.html
+++ b/index.html
@@ -269,10 +269,16 @@
             onClick="clickOrderLoc(this.id)">
               <span class="articlelist__listitemcontent articlelist__listitemcontent--orderloc">
                 <div  class="articlelist__orderlocmob" >
+                                 
+                  <span class="articlelist__orderlocmobselected articlelist__orderlocmobselected--hidden material-icons-outlined md-36">
+                    check_circle
+                  </span>
                   <div class="articlelist__orderlocmobinfo">
                     <p>01-01-2020 07:00-16:00</p>
                     <p>Binnenrotte Rotterdam</p>
                   </div>
+
+              
                   <a
                     onClick="openLoc(51.9205400, 4.4886000)"
                     class="articlelist__orderlocmobmap"
@@ -280,8 +286,8 @@
                   </a>
                   </div>
               </span>
-              <button class="articlelist__listitembutton">
-                <span class="material-icons-outlined md-36">delete</span>
+              <button class="articlelist__listitembutton articlelist__listitembutton--hidden">
+                <span class="material-icons-outlined md-36">highlight_off</span>
               </button>
             </li>
 
@@ -290,6 +296,9 @@
             onClick="clickOrderLoc(this.id)">
               <span class="articlelist__listitemcontent articlelist__listitemcontent--orderloc">
                 <div  class="articlelist__orderlocmob" >
+                  <span class="articlelist__orderlocmobselected articlelist__orderlocmobselected--hidden material-icons-outlined md-36">
+                    check_circle
+                  </span>
                   <div class="articlelist__orderlocmobinfo">
                     <p>04-01-2020 07:00-16:00</p>
                     <p>Hesseplaats, Ommoord</p>
@@ -301,8 +310,8 @@
                   </a>
                   </div>
               </span>
-              <button class="articlelist__listitembutton ">
-                <span class="material-icons-outlined md-36">delete</span>
+              <button class="articlelist__listitembutton articlelist__listitembutton--hidden">
+                <span class="material-icons-outlined md-36">highlight_off</span>
               </button>
             </li>
 
@@ -310,6 +319,9 @@
             onClick="clickOrderLoc(this.id)">
               <span class="articlelist__listitemcontent articlelist__listitemcontent--orderloc">
                 <div  class="articlelist__orderlocmob" >
+                  <span class="articlelist__orderlocmobselected articlelist__orderlocmobselected--hidden material-icons-outlined md-36">
+                    check_circle
+                  </span>
                   <div class="articlelist__orderlocmobinfo">
                     <p>07-01-2020 07:00-16:00</p>
                     <p>Raadhuisplein 1, Voorhout</p>
@@ -321,8 +333,8 @@
                   </a>
                   </div>
               </span>
-              <button class="articlelist__listitembutton">
-                <span class="material-icons-outlined md-36">delete</span>
+              <button class="articlelist__listitembutton articlelist__listitembutton--hidden">
+                <span class="material-icons-outlined md-36">highlight_off</span>
               </button>
             </li>
           </div>
